--- a/ISMHelpdesk/web/index.html
+++ b/ISMHelpdesk/web/index.html
@@ -56,11 +56,15 @@
     <script src="vendor/scripts/angular-touch.min.js"></script>
     <script src="vendor/scripts/angular-route.min.js"></script>
     <script src="vendor/scripts/angular-cookies.min.js"></script>
-    <script src="scripts/app.js"></script>
+    <script src="vendor/scripts/require.min.js"></script>
+    <script src="scripts/app.js"></script>    
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/new-candidate.js"></script>
     <script src="scripts/controllers/results.js"></script>
-    <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/controllers/login.js"></script>
+    <script src="scripts/services/cloudantservices.js"></script>
+    <script src="scripts/services/services.js"></script>
+    
 
 </body>
 </html>
